--- a/src/components/Projects/Column/index.css
+++ b/src/components/Projects/Column/index.css
@@ -33,3 +33,34 @@
     color: #329C89;
     margin: 20px 0;
 }
+
+.new-task-card {
+    background-color: #ffffff;
+    padding: 20px;
+}
+
+.new-task-card > input {
+    width: 100%;
+    height: 20px;
+    border: none;
+    margin: 8px;
+}
+
+.new-task-card > input:focus {
+    outline: none;
+}
+
+.new-task-card > input::placeholder {
+    font-size: 14px;
+} 
+
+.new-task-card > button {
+    margin: 12px 6px;
+    padding: 6px;
+    font-weight: 600;
+    color: #329C89;
+    background-color: #F5F9F9;
+    border: 1px solid #329C89;
+    border-radius: 25px;
+    width: 25%;
+}
