--- a/src/components/Projects/Column/index.css
+++ b/src/components/Projects/Column/index.css
@@ -37,6 +37,9 @@
 .new-task-card {
     background-color: #ffffff;
     padding: 20px;
+    border: 1px solid #DBDBDB;
+    box-shadow: 0px 0px 28px rgba(72, 174, 174, 0.07);
+    border-radius: 7px;
 }
 
 .new-task-card > input {
